--- a/pembayaran.html
+++ b/pembayaran.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pembayaran Muslih Fvnky</title>
+  <title>Hanya Lewat DANA!!</title>
   <style>
     body {
       font-family: Arial, sans-serif;
