--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- TEKS NAMA DAN DESKRIPSI -->
   <div>
     <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
-    <p class="text-sm text-gray-300">Tempat Jual Beli FLM Murah</p>
+    <p class="text-sm text-gray-300">Jual FLM & Pemesanan Remix Terjangkau Berkualitas!!</p>
   </div>
 </header>
 
