--- a/jual-flm.html
+++ b/jual-flm.html
@@ -5,39 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Muslih Fvnky Shop – Daftar FLM</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      background-image: url('https://i.imgur.com/5HuEhsu.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+  </style>
 </head>
-<body class="bg-black text-white font-sans p-4">
+<body class="text-white font-sans p-4 bg-black/70">
   <h1 class="text-2xl font-bold mb-4">MUSLIH FVNKY SHOP</h1>
   <p class="mb-6">List FLM Beserta Harga Ada Di Bawah</p>
   <div class="flex justify-center mt-4 mb-2">
     <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Logo Muslih Fvnky" class="w-20 h-20 rounded-full">
   </div>
-  <p class="mb-6 text-gray-400 italic">FLM Dibawah Hanya Khusus FL Studio Mobile Ya!! Ouh Iya Cara Pemasangannya Yaitu Kalian Gausah Di extract Jadi Langsung Di Import Di FLnya Langsung Atau Kalo Masih Belum Paham Bisa Hubungi WA Saya</p>
+  <p class="mb-6 text-gray-300 italic bg-black/60 p-2 rounded">
+    FLM Dibawah Hanya Khusus FL Studio Mobile Ya!! Ouh Iya Cara Pemasangannya Yaitu Kalian Gausah Di extract Jadi Langsung Di Import Di FLnya Langsung Atau Kalo Masih Belum Paham Bisa Hubungi WA Saya
+  </p>
 
   <ul class="space-y-3">
     <li>
       <a href="pembayaran.html?produk=FLM RULLY FVNKY" class="block p-3 bg-red-800 rounded hover:bg-red-700">
-        FLM RULLY FVNKY – Harga: Rp 99.000
+        FLM RULLY FVNKY – Harga: Rp 120.000
       </a>
     </li>
     <li>
       <a href="pembayaran.html?produk=FLM KONDANG" class="block p-3 bg-red-800 rounded hover:bg-red-700">
-        FLM KONDANG – Harga: Rp 98.000
+        FLM KONDANG – Harga: Rp 120.000
       </a>
     </li>
-    <a href="pembayaran.html?produk=FLM KONDANG" class="block p-3 bg-red-800 rounded hover:bg-red-700">
-        FLM MAMAN FVNDY – Harga: Rp 118.000
-      </a>
-  </li>
     <li>
       <a href="pembayaran.html?produk=FLM Style Candu" class="block p-3 bg-red-800 rounded hover:bg-red-700">
-        FLM Style Candu – Harga: Rp 99.000
+        FLM Style Candu – Harga: Rp 120.000
       </a>
     </li>
-    <!-- Tambahkan lebih banyak item -->
   </ul>
 
-  <footer class="mt-8 text-xs text-gray-500 border-t pt-4">
+  <footer class="mt-8 text-xs text-gray-400 border-t border-gray-600 pt-4 bg-black/50 p-2 rounded">
     © 2025 Muslih Fvnky Shop. All rights reserved.
   </footer>
 </body>
