--- a/jual-flm.html
+++ b/jual-flm.html
@@ -27,20 +27,25 @@
   <ul class="space-y-3">
     <li>
       <a href="pembayaran.html?produk=FLM RULLY FVNKY" class="block p-3 bg-red-800 rounded hover:bg-red-700">
-        FLM RULLY FVNKY – Harga: Rp 120.000
+        FLM RULLY FVNKY – Harga: Rp 98.000
       </a>
     </li>
     <li>
       <a href="pembayaran.html?produk=FLM KONDANG" class="block p-3 bg-red-800 rounded hover:bg-red-700">
-        FLM KONDANG – Harga: Rp 120.000
+        FLM KONDANG – Harga: Rp 99.000
       </a>
     </li>
     <li>
       <a href="pembayaran.html?produk=FLM Style Candu" class="block p-3 bg-red-800 rounded hover:bg-red-700">
-        FLM Style Candu – Harga: Rp 120.000
+        FLM Style Candu – Harga: Rp 98.000
       </a>
     </li>
   </ul>
+        <a href="pembayaran.html?produk=FLM MAMAN KONDANG" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM MAMAN FVNDY – Harga: Rp 115.000
+      </a>
+    </li>
+    <li
 
   <footer class="mt-8 text-xs text-gray-400 border-t border-gray-600 pt-4 bg-black/50 p-2 rounded">
     © 2025 Muslih Fvnky Shop. All rights reserved.
