--- a/jual-flm.html
+++ b/jual-flm.html
@@ -36,7 +36,7 @@
       </a>
     </li>
     <li>
-         <a href="pembayaran.html?produk=FLM MAMAN KONDANG" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+         <a href="pembayaran.html?produk=FLM MAMAN FVNDY" class="block p-3 bg-red-800 rounded hover:bg-red-700">
         FLM MAMAN FVNDY – Harga: Rp 115.000
       </a>
     </li>
