--- a/pemesanan-lagu.html
+++ b/pemesanan-lagu.html
@@ -7,13 +7,17 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #111;
+      background-image: url('https://i.imgur.com/5HuEhsu.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
       color: #fff;
       text-align: center;
       padding: 20px;
     }
-    .box {
-      background-color: #222;
+    /* Overlay hitam transparan supaya teks lebih jelas */
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.6);
       padding: 20px;
       border-radius: 10px;
       max-width: 400px;
@@ -30,11 +34,15 @@
       background-color: #e60000;
       color: #fff;
       font-weight: bold;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #ff1a1a;
     }
   </style>
 </head>
 <body>
-  <div class="box">
+  <div class="overlay">
     <h2>Pemesanan Remix Lagu</h2>
 
     <label for="Judul">Silahkan Isi Mau Remix Lagu Apa:</label>
