--- a/pembayaran.html
+++ b/pembayaran.html
@@ -7,13 +7,15 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #111;
+      background: url('https://i.imgur.com/5HuEhsu.jpeg') no-repeat center center fixed;
+      background-size: cover;
       color: #fff;
       text-align: center;
       padding: 20px;
+      margin: 0;
     }
     .box {
-      background-color: #222;
+      background-color: rgba(0, 0, 0, 0.7);
       padding: 20px;
       border-radius: 10px;
       max-width: 400px;
@@ -30,6 +32,10 @@
       background-color: #e60000;
       color: #fff;
       font-weight: bold;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #ff1a1a;
     }
   </style>
 </head>
