--- a/jual-flm.html
+++ b/jual-flm.html
@@ -37,7 +37,7 @@
     </li>
     <li>
             <a href="pembayaran.html?produk=REQUEST FLM!!" class="block p-3 bg-red-800 rounded hover:bg-red-700">
-        REQUEST FLM!! – Harga: Rp 115.000
+        REQUEST FLM!! – Harga: 80K - 115K
       </a>
     </li>
     <li>
