--- a/pemesanan-lagu.html
+++ b/pemesanan-lagu.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html lang="id">
+titled">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pemesanan Remix</title>
+  <title>Pemesanan Remix Harga Kisaran 80k - 150k</title>
   <style>
     body {
       font-family: Arial, sans-serif;
