--- a/pemesanan-lagu.html
+++ b/pemesanan-lagu.html
@@ -42,7 +42,7 @@ titled">
 </head>
 <body>
   <div class="overlay">
-    <h2>Pemesanan Remix Lagu</h2>
+    <h2>Pemesanan Remix Lagu 80k - 125k</h2>
 
     <label for="Judul">Silahkan Isi Mau Remix Lagu Apa:</label>
     <input type="text" id="Judul" placeholder="Contoh: Empat Mata" required />
