--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <h3 class="text-lg font-semibold border-b-2 border-red-500 inline-block mb-3">Hubungi Kami</h3>
         <p>WhatsApp: <a href="https://wa.me/6283821665970" class="underline">Wa Bang Muslih Ganteng</a></p>
         <p>Instagram: <a href="https://www.instagram.com/mslihh.wav?igsh=MTBpdm9heTVuNjgyOA==" class="underline">@mslihh.wav</a></p>
+        <p>Youtube: <a href="https://youtube.com/@muslihfvnky?si=hfGYlsJh5RYih5D_==" class="underline">Muslih Fvnky</a></p>
       </section>
 
       <!-- Footer -->
