--- a/jual-flm.html
+++ b/jual-flm.html
@@ -55,6 +55,11 @@
         FLM Style Candu – Harga: Rp 98.000
       </a>
     </li>
+        <a href="pembayaran.html?produk=FLM HAPPY TEAM ORI" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM HAPPY TEAM ORI – Harga: Rp 95.000
+      </a>
+    </li>
+    <li>
   </ul>
   <footer class="mt-8 text-xs text-gray-400 border-t border-gray-600 pt-4 bg-black/50 p-2 rounded">
     © 2025 Muslih Fvnky Shop. All rights reserved.
