--- a/jual-flm.html
+++ b/jual-flm.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+li!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
@@ -82,6 +82,13 @@
       <button onclick="togglePlay('audio7', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
       <audio id="audio7" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Happy%20Team%20Contoh.mp3"></audio>
     </li>
+        <li>
+      <a href="pembayaran.html?produk=FLM Arif Sopan" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM Arif Sopan – Harga: Rp 95.000
+      </a>
+      <button onclick="togglePlay('audio7', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio7" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Kane%ORIontoh.mp3"></audio>
+        </li>
   </ul>
 
   <footer class="mt-8 text-xs text-gray-400 border-t border-gray-600 pt-4 bg-black/50 p-2 rounded">
