--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 
       <!-- Product Section -->
       <section class="mb-8">
-        <h3 class="text-lg font-semibold border-b-2 border-red-500 inline-block mb-3">Jasa Saya</h3>
+        <h3 class="text-lg font-semibold border-b-2 border-red-500 inline-block mb-3">Silahkan Pilih!!a/h3>
         <div class="flex flex-col md:flex-row md:space-x-4 space-y-2 md:space-y-0">
           <a href="jual-flm.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700 mb-2 md:mb-0">Jual FLM</a>
           <a href="pemesanan-lagu.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700">pemesanan Lagu</a>
+          <a href="jasa-mixing.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700">Jasa Mixing & Mastering</a>
         </div>
       </section>
 
