--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="mb-8">
         <h2 class="text-xl font-bold mb-2">Selamat Datang Di Muslih Fvnky Shop</h2>
         <p class="text-gray-200 text-sm">
-          Saya Menjual FLM Atau Projek Fl Studio Mobile Dan Juga Menerima Pembelian Lagu Untuk Yang Berminat Bisa Langsung Cek Semua Produk Dibawah Ini!!
+          Saya Menjual FLM Atau Projek Fl Studio Mobile Dan Juga Menerima Pembelian Lagu Untuk Yang Berminat Bisa Langsung Cek Semua Produk Dibawah Ini!! WEBSITE BAKAL DI UPDATE SETIAP HARINYA JADI NANTIKAN FLM MENARIK LAINNYA!!!
         </p>
       </section>
 
