--- a/jual-flm.html
+++ b/jual-flm.html
@@ -89,6 +89,62 @@
       <button onclick="togglePlay('audio8', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
       <audio id="audio8" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Kane%20Contoh.mp3"></audio>
         </li>
+                <li>
+      <a href="pembayaran.html?produk=FLM Lambada" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM Lambada – Harga: Rp 100.000
+      </a>
+      <button onclick="togglePlay('audio9', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio9" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Lambada.mp3"></audio>
+        </li>
+                <li>
+      <a href="pembayaran.html?produk=FLM Angga Fvnky" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM Angga Fvnky – Harga: Rp 95.000
+      </a>
+      <button onclick="togglePlay('audio10', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio10" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Angga%20Fvnky.mp3"></audio>
+        </li>
+                <li>
+      <a href="pembayaran.html?produk=FLM Enaff V1" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM Enaff V1 – Harga: Rp 98.000
+      </a>
+      <button onclick="togglePlay('audio11', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio11" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Enaff%20V1.mp3"></audio>
+        </li>
+                <li>
+      <a href="pembayaran.html?produk=FLM Febri Remix" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM Febri Remix – Harga: Rp 92.000
+      </a>
+      <button onclick="togglePlay('audio12', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio12" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Febri%20Remix.mp3"></audio>
+        </li>
+                <li>
+      <a href="pembayaran.html?produk=FLM Jawa Pride" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM Jawa Pride – Harga: Rp 90.000
+      </a>
+      <button onclick="togglePlay('audio13', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio13" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride.mp3"></audio>
+        </li>
+                <li>
+      <a href="pembayaran.html?produk=FLM Jawa Pride V2" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM Jawa Pride V2 – Harga: Rp 90.000
+      </a>
+      <button onclick="togglePlay('audio14', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio14" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride%20V2.mp3"></audio>
+        </li>
+                  <li>
+      <a href="pembayaran.html?produk=FLM Jawa Pride V3" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM Jawa Pride V3 – Harga: Rp 90.000
+      </a>
+      <button onclick="togglePlay('audio15', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio15" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride%20V3.mp3"></audio>
+        </li>
+                          <li>
+      <a href="pembayaran.html?produk=FLM JDM KT" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+        FLM JDM KT – Harga: Rp 110.000
+      </a>
+      <button onclick="togglePlay('audio16', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <audio id="audio16" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20JDM%20KT.mp3"></audio>
+        </li>
   </ul>
 
   <footer class="mt-8 text-xs text-gray-400 border-t border-gray-600 pt-4 bg-black/50 p-2 rounded">
