--- a/pembayaran.html
+++ b/pembayaran.html
@@ -21,12 +21,14 @@
       max-width: 400px;
       margin: auto;
     }
-    input, select, button {
+    input, select, button, a {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
       border-radius: 5px;
       border: none;
+      text-decoration: none;
+      display: block;
     }
     button {
       background-color: #e60000;
@@ -37,6 +39,20 @@
     button:hover {
       background-color: #ff1a1a;
     }
+    .btn-dana {
+      background-color: #00b14f;
+      color: white;
+      font-weight: bold;
+    }
+    .btn-dana:hover {
+      background-color: #00cc5f;
+    }
+    .qr-img {
+      width: 250px;
+      border-radius: 10px;
+      margin: 10px auto;
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -44,12 +60,19 @@
     <h2>Pembayaran Muslih Fvnky</h2>
     <p><strong>Nomor DANA:</strong> 083821665970</p>
 
+    <!-- Gambar QR DANA -->
+    <img src="https://i.imgur.com/qD7pCy2.jpeg" alt="QR DANA" class="qr-img" />
+
     <label for="produk">Jenis Produk:</label>
     <input type="text" id="produk" placeholder="Contoh: FLM Trabas" required />
 
     <label for="nominal">Nominal Transfer (Rp):</label>
-    <input type="number" id="nominal" placeholder="Contoh: 100.000" required />
+    <input type="number" id="nominal" placeholder="Contoh: 100000" required />
 
+    <!-- Tombol Bayar via DANA -->
+    <a id="btnDana" class="btn-dana" href="#" target="_blank">Bayar via DANA</a>
+
+    <!-- Tombol Kirim ke WhatsApp -->
     <button onclick="kirimWA()">Kirim ke WhatsApp</button>
   </div>
 
@@ -63,6 +86,20 @@
       }
     });
 
+    // Tombol DANA
+    document.getElementById('btnDana').addEventListener('click', function (e) {
+      e.preventDefault();
+      const nominal = document.getElementById('nominal').value;
+      if (!nominal) {
+        alert('Mohon isi nominal transfer');
+        return;
+      }
+      // Link DANA (akan buka aplikasi di HP)
+      const danaLink = `https://link.dana.id/minta/083821665970`;
+      window.open(danaLink, '_blank');
+    });
+
+    // Tombol WhatsApp
     function kirimWA() {
       const produk = document.getElementById('produk').value;
       const nominal = document.getElementById('nominal').value;
