--- a/pembayaran.html
+++ b/pembayaran.html
@@ -61,7 +61,7 @@
     <p><strong>Nomor DANA:</strong> 083821665970</p>
 
     <!-- Gambar QR DANA -->
-    <img src="https//imgur.com/c3f2b905-f843-44ef-9297-8209c7b93b8c" alt="QR DANA" class="qr-img" />
+    <img src="https://i.imgur.com/sd67NeU.jpeg" alt="QR DANA" class="qr-img" />
 
     <label for="produk">Jenis Produk:</label>
     <input type="text" id="produk" placeholder="Contoh: FLM Trabas" required />
