--- a/pembayaran.html
+++ b/pembayaran.html
@@ -23,12 +23,13 @@
     }
     input, select, button, a {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
       border-radius: 5px;
       border: none;
       text-decoration: none;
       display: block;
+      font-size: 16px;
     }
     button {
       background-color: #e60000;
@@ -43,6 +44,8 @@
       background-color: #00b14f;
       color: white;
       font-weight: bold;
+      text-align: center;
+      cursor: pointer;
     }
     .btn-dana:hover {
       background-color: #00cc5f;
