--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
           <a href="jual-flm.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700 mb-2 md:mb-0">Jual FLM</a>
           <a href="pemesanan-lagu.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700">pemesanan Lagu</a>
           <a href="jasa-mixing.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700">Jasa Mixing & Mastering</a>
+          <!-- Tombol baru: Jasa Nyusun Chord & BPM -->
+          <a href="jasa-chord-dan-bpm.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700">Jasa Nyusun Chord & BPM</a>
         </div>
       </section>
 
