--- a/index.html
+++ b/index.html
@@ -7,31 +7,89 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background: url('https://i.imgur.com/5HuEhsu.jpeg') no-repeat center center fixed;
+      background: url('https://i.imgur.com/p0K2KQs.png') no-repeat center center fixed;
       background-size: cover;
+      font-family: sans-serif;
     }
-    /* Overlay gelap biar teks tetap terbaca */
+
     .overlay {
-      background-color: rgba(0, 0, 0, 0.7);
+      background-color: rgba(0,0,0,0.7);
       min-height: 100vh;
+      padding: 2rem 0;
+    }
+
+    .fade-slide {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeSlide 1s forwards;
+    }
+    @keyframes fadeSlide {
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .glow-btn {
+      transition: all 0.3s ease-in-out;
+      border: 2px solid #0FFCBE;
+      background: rgba(16,110,190,0.8);
+      backdrop-filter: blur(6px);
+    }
+    .glow-btn:hover {
+      background: #0FFCBE;
+      box-shadow: 0 0 15px #0FFCBE, 0 0 25px #00f0ff;
+      color: black;
+    }
+
+    .animated-gradient {
+      background: linear-gradient(-45deg, #106EBE, #0FFCBE, #106EBE, #0FFCBE);
+      background-size: 400% 400%;
+      animation: gradientMove 6s ease infinite;
+      padding: 1rem 1.5rem;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+      position: relative;
+      z-index: 10;
+    }
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .float-logo {
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+      animation: float 3s ease-in-out infinite;
+      flex-shrink: 0;
+      opacity: 1; /* pastikan muncul */
+      transform: none; /* hilangkan transform awal */
+    }
+    @keyframes float {
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(-5px); }
     }
   </style>
 </head>
 <body class="text-white font-sans">
+
+  <!-- Header & Logo di luar overlay -->
+  <header class="animated-gradient" style="max-width: 2xl; margin: 1rem auto;">
+    <img src="https://i.imgur.com/4jIRft9.jpeg" alt="Logo Muslih Fvnky" class="float-logo">
+    <div>
+      <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
+      <p class="text-sm text-gray-200">Tempat Jual Beli FLM Murah</p>
+    </div>
+  </header>
+
   <div class="overlay">
     <div class="max-w-2xl mx-auto p-4">
 
-      <!-- Header -->
-      <header class="flex items-center space-x-4 p-4 bg-gradient-to-r from-black to-red-900 text-white shadow-md rounded-lg">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Logo Muslih Fvnky" class="w-14 h-14 rounded-full shadow-lg">
-        <div>
-          <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
-          <p class="text-sm text-gray-300">Tempat Jual Beli FLM Murah</p>
-        </div>
-      </header>
-
       <!-- Welcome Section -->
-      <section class="mb-8">
+      <section class="mb-8 fade-slide" style="animation-delay: 0.3s;">
         <h2 class="text-xl font-bold mb-2">Selamat Datang Di Muslih Fvnky Shop</h2>
         <p class="text-gray-200 text-sm">
           Saya Menjual FLM Atau Projek Fl Studio Mobile Dan Juga Menerima Pembelian Lagu Untuk Yang Berminat Bisa Langsung Cek Semua Produk Dibawah Ini!! WEBSITE BAKAL DI UPDATE SETIAP HARINYA JADI NANTIKAN FLM MENARIK LAINNYA!!!
@@ -39,20 +97,19 @@
       </section>
 
       <!-- Product Section -->
-      <section class="mb-8">
-        <h3 class="text-lg font-semibold border-b-2 border-red-500 inline-block mb-3">Silahkan Pilih!!</h3>
+      <section class="mb-8 fade-slide" style="animation-delay: 0.5s;">
+        <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Silahkan Pilih!!</h3>
         <div class="flex flex-col md:flex-row md:space-x-4 space-y-2 md:space-y-0">
-          <a href="jual-flm.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700 mb-2 md:mb-0">Jual FLM</a>
-          <a href="pemesanan-lagu.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700">pemesanan Lagu</a>
-          <a href="jasa-mixing.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700">Jasa Mixing & Mastering</a>
-          <!-- Tombol baru: Jasa Nyusun Chord & BPM -->
-          <a href="jasa-chord-dan-bpm.html" class="block bg-red-800 rounded-lg px-4 py-3 text-center hover:bg-red-700">Jasa Nyusun Chord & BPM</a>
+          <a href="jual-flm.html" class="block rounded-lg px-4 py-3 text-center glow-btn">Jual FLM</a>
+          <a href="pemesanan-lagu.html" class="block rounded-lg px-4 py-3 text-center glow-btn">Pemesanan Lagu</a>
+          <a href="jasa-mixing.html" class="block rounded-lg px-4 py-3 text-center glow-btn">Jasa Mixing & Mastering</a>
+          <a href="jasa-chord-dan-bpm.html" class="block rounded-lg px-4 py-3 text-center glow-btn">Jasa Nyusun Chord & BPM</a>
         </div>
       </section>
 
       <!-- Keunggulan Kami -->
-      <section class="mb-8">
-        <h3 class="text-lg font-semibold border-b-2 border-red-500 inline-block mb-3">Keunggulan Kami</h3>
+      <section class="mb-8 fade-slide" style="animation-delay: 0.7s;">
+        <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Keunggulan Kami</h3>
         <ul class="list-disc list-inside text-sm text-gray-200">
           <li>✅ Harga Murah</li>
           <li>✅ Website Original Muslih Fvnky</li>
@@ -62,15 +119,15 @@
       </section>
 
       <!-- Kontak -->
-      <section class="mb-8 text-sm text-gray-200">
-        <h3 class="text-lg font-semibold border-b-2 border-red-500 inline-block mb-3">Hubungi Kami</h3>
-        <p>WhatsApp: <a href="https://wa.me/6283821665970" class="underline">Wa Bang Muslih Ganteng</a></p>
-        <p>Instagram: <a href="https://www.instagram.com/mslihh.wav?igsh=MTBpdm9heTVuNjgyOA==" class="underline">@mslihh.wav</a></p>
-        <p>Youtube: <a href="https://youtube.com/@muslihfvnky?si=hfGYlsJh5RYih5D_==" class="underline">Muslih Fvnky</a></p>
+      <section class="mb-8 text-sm text-gray-200 fade-slide" style="animation-delay: 0.9s;">
+        <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Hubungi Kami</h3>
+        <p>WhatsApp: <a href="https://wa.me/6283821665970" class="underline hover:text-[#0FFCBE]">Wa Bang Muslih Ganteng</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/mslihh.wav?igsh=MTBpdm9heTVuNjgyOA==" class="underline hover:text-[#0FFCBE]">@mslihh.wav</a></p>
+        <p>Youtube: <a href="https://youtube.com/@muslihfvnky?si=hfGYlsJh5RYih5D_==" class="underline hover:text-[#0FFCBE]">Muslih Fvnky</a></p>
       </section>
 
       <!-- Footer -->
-      <footer class="text-center text-gray-500 text-xs border-t border-gray-700 pt-4">
+      <footer class="text-center text-gray-500 text-xs border-t border-gray-700 pt-4 fade-slide" style="animation-delay: 1.1s;">
         <p>© 2025 Muslih Fvnky Shop. All rights reserved.</p>
       </footer>
 
