--- a/jasa-chord-dan-bpm.html
+++ b/jasa-chord-dan-bpm.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background-image: url('https://i.imgur.com/5HuEhsu.jpeg');
+      background-image: url('https://i.imgur.com/p0K2KQs.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -17,6 +17,40 @@
       background: rgba(0,0,0,0.72);
       min-height: 100vh;
     }
+    /* Input transparan + border mint */
+    input, select, textarea {
+      background-color: transparent !important;
+      border: 2px solid #0FFCBE !important;
+      color: white;
+      outline: none;
+      transition: all 0.3s ease;
+    }
+    input:focus, select:focus, textarea:focus {
+      box-shadow: 0 0 10px #0FFCBE;
+    }
+    /* Tombol style biru-mint */
+    .btn-primary {
+      background-color: #106EBE;
+      border: 2px solid #0FFCBE;
+      color: white;
+      transition: all 0.3s ease;
+    }
+    .btn-primary:hover {
+      background-color: #0FFCBE;
+      color: #106EBE;
+      box-shadow: 0 0 20px #0FFCBE, 0 0 40px #106EBE;
+    }
+    .btn-secondary {
+      background-color: #0FFCBE;
+      border: 2px solid #106EBE;
+      color: #106EBE;
+      transition: all 0.3s ease;
+    }
+    .btn-secondary:hover {
+      background-color: #106EBE;
+      color: #0FFCBE;
+      box-shadow: 0 0 20px #106EBE, 0 0 40px #0FFCBE;
+    }
   </style>
 </head>
 <body class="text-white font-sans">
@@ -24,33 +58,33 @@
     <div class="max-w-2xl mx-auto p-4">
 
       <!-- Header -->
-      <header class="flex items-center gap-4 p-4 bg-gradient-to-r from-black to-red-900 text-white shadow-md rounded-lg mb-6">
+      <header class="flex items-center gap-4 p-4 bg-gradient-to-r from-[#106EBE] to-[#0FFCBE] text-white shadow-md rounded-lg mb-6">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="Logo Muslih Fvnky" class="w-14 h-14 rounded-full shadow-lg">
         <div>
           <h1 class="text-xl font-bold">Muslih Fvnky Shop</h1>
-          <p class="text-sm text-gray-300">Jasa Nyusun Chord & BPM Lagu — Kirim detail, kami proses</p>
+          <p class="text-sm text-gray-200">Jasa Nyusun Chord & BPM Lagu — Kirim detail, kami proses</p>
         </div>
       </header>
 
       <!-- Form -->
       <main class="bg-black/60 p-6 rounded-lg shadow-lg">
-        <h2 class="text-2xl font-bold mb-2">Pesan Jasa Nyusun Chord & BPM Lagu</h2>
+        <h2 class="text-2xl font-bold mb-2 text-[#0FFCBE]">Pesan Jasa Nyusun Chord & BPM Lagu</h2>
         <p class="text-sm text-gray-300 mb-4">Pilih paket, isi data & detail, lalu kirim ke WhatsApp.</p>
 
         <div class="space-y-4">
           <div>
             <label class="block text-sm mb-1">Nama</label>
-            <input id="nama" type="text" placeholder="Masukkan nama kamu" class="w-full p-3 rounded bg-gray-800 border border-gray-700" />
+            <input id="nama" type="text" placeholder="Masukkan nama kamu" class="w-full p-3 rounded" />
           </div>
 
           <div>
             <label class="block text-sm mb-1">Kontak (WA atau Email)</label>
-            <input id="kontak" type="text" placeholder="Contoh: 0838xxxx atau email@ex.com" class="w-full p-3 rounded bg-gray-800 border border-gray-700" />
+            <input id="kontak" type="text" placeholder="Contoh: 0838xxxx atau email@ex.com" class="w-full p-3 rounded" />
           </div>
 
           <div>
             <label class="block text-sm mb-1">Pilih Paket</label>
-            <select id="paket" class="w-full p-3 rounded bg-gray-800 border border-gray-700">
+            <select id="paket" class="w-full p-3 rounded">
               <option value="1 Lagu - Rp 10.000">1 Lagu — Rp 10.000</option>
               <option value="2 Lagu - Rp 20.000">2 Lagu — Rp 20.000</option>
             </select>
@@ -58,18 +92,18 @@
 
           <div>
             <label class="block text-sm mb-1">Link Lagu YouTube</label>
-            <input id="linkfile" type="text" placeholder="https://youtube.com/..." class="w-full p-3 rounded bg-gray-800 border border-gray-700" />
+            <input id="linkfile" type="text" placeholder="https://youtube.com/..." class="w-full p-3 rounded" />
             <p class="text-xs text-gray-400 mt-1">Tempel link lagu yang mau dibuat chord & BPM-nya.</p>
           </div>
 
           <div>
             <label class="block text-sm mb-1">Detail / Catatan</label>
-            <textarea id="catatan" rows="4" placeholder="Contoh: ingin chord gitar + tempo BPM jelas" class="w-full p-3 rounded bg-gray-800 border border-gray-700"></textarea>
+            <textarea id="catatan" rows="4" placeholder="Contoh: ingin chord gitar + tempo BPM jelas" class="w-full p-3 rounded"></textarea>
           </div>
 
           <div class="flex gap-3">
-            <button id="waBtn" onclick="kirimWA()" class="flex-1 p-3 bg-red-600 rounded font-bold hover:bg-red-500">Kirim & Pesan lewat WhatsApp</button>
-            <button id="previewBtn" onclick="previewTemplate()" class="w-40 p-3 bg-green-600 rounded font-semibold hover:bg-green-500">Preview Pesan</button>
+            <button id="waBtn" onclick="kirimWA()" class="flex-1 p-3 rounded font-bold btn-primary">Kirim & Pesan lewat WhatsApp</button>
+            <button id="previewBtn" onclick="previewTemplate()" class="w-40 p-3 rounded font-semibold btn-secondary">Preview Pesan</button>
           </div>
 
           <p id="msg" class="text-sm text-gray-300"></p>
@@ -88,7 +122,6 @@
     function generateID(prefix='CHD') {
       return prefix + '-' + Math.floor(100000 + Math.random() * 900000);
     }
-
     function getDateTime() {
       const now = new Date();
       const hari = ["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
@@ -97,7 +130,6 @@
       const tanggal = `${hari[now.getDay()]}, ${now.getDate()} ${bulan[now.getMonth()]} ${now.getFullYear()}`;
       return { jam, tanggal };
     }
-
     function buildMessage(nama, kontak, paket, linkfile, catatan) {
       const trx = generateID('CHD');
       const dt = getDateTime();
@@ -113,7 +145,6 @@
       msg += `> *Terima kasih — silakan tunggu admin membalas.*`;
       return { text: msg, trx };
     }
-
     function kirimWA() {
       const nama = document.getElementById('nama').value.trim();
       const kontak = document.getElementById('kontak').value.trim();
@@ -126,13 +157,11 @@
         statusEl.textContent = 'Mohon isi Nama dan Kontak agar admin dapat menghubungi Anda.';
         return;
       }
-
       const { text, trx } = buildMessage(nama, kontak, paket, linkfile, catatan);
       const url = `https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(decodeURIComponent(text))}`;
       statusEl.innerHTML = `Pesan siap dikirim (ID: <strong>${trx}</strong>) — membuka WhatsApp...`;
       window.open(url, '_blank');
     }
-
     function previewTemplate() {
       const nama = document.getElementById('nama').value.trim();
       const kontak = document.getElementById('kontak').value.trim();
@@ -140,7 +169,6 @@
       const linkfile = document.getElementById('linkfile').value.trim();
       const catatan = document.getElementById('catatan').value.trim();
       const { text } = buildMessage(nama, kontak, paket, linkfile, catatan);
-
       const decoded = decodeURIComponent(text.replace(/%0A/g, '\n'));
       const w = window.open('', '_blank', 'width=600,height=600');
       w.document.write('<pre style="white-space:pre-wrap;font-family:monospace;padding:20px;background:#111;color:#fff;">' + decoded + '</pre>');
