--- a/jual-flm.html
+++ b/jual-flm.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background-image: url('https://i.imgur.com/5HuEhsu.jpeg');
+      background-image: url('https://i.imgur.com/p0K2KQs.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -26,128 +26,135 @@
 
   <ul class="space-y-4">
     <li>
-      <a href="pembayaran.html?produk=FLM RULLY FVNKY" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+      <a href="pembayaran.html?produk=FLM RULLY FVNKY" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM RULLY FVNKY – Harga: Rp 98.000
       </a>
-      <button onclick="togglePlay('audio1', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio1', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio1" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Rully%20Fvnky%20Contoh.mp3"></audio>
     </li>
 
     <li>
-      <a href="pembayaran.html?produk=FLM KONDANG" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+      <a href="pembayaran.html?produk=FLM KONDANG" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM KONDANG – Harga: Rp 99.000
       </a>
-      <button onclick="togglePlay('audio2', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio2', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio2" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Kondang%20Contoh.mp3"></audio>
     </li>
 
     <li>
-      <a href="pembayaran.html?produk=REQUEST FLM!!" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+      <a href="pembayaran.html?produk=REQUEST FLM!!" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         REQUEST FLM!! – Harga: 80K - 115K
       </a>
-      <button onclick="togglePlay('audio3', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio3', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio3" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Request%20FLM%20Contoh.mp3"></audio>
     </li>
 
     <li>
-      <a href="pembayaran.html?produk=FLM HIPDUT LAMUNAN" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+      <a href="pembayaran.html?produk=FLM HIPDUT LAMUNAN" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM HIPDUT LAMUNAN – Harga: Rp 115.000
       </a>
-      <button onclick="togglePlay('audio4', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio4', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio4" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Hipdut%20Contoh.mp3"></audio>
     </li>
 
     <li>
-      <a href="pembayaran.html?produk=FLM MAMAN FVNDY" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+      <a href="pembayaran.html?produk=FLM MAMAN FVNDY" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM MAMAN FVNDY – Harga: Rp 115.000
       </a>
-      <button onclick="togglePlay('audio5', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio5', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio5" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Maman%20Fvndy%20Contoh.mp3"></audio>
     </li>
 
     <li>
-      <a href="pembayaran.html?produk=FLM Style Candu" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+      <a href="pembayaran.html?produk=FLM Style Candu" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Style Candu - Harga: Rp 98.000
       </a>
-      <button onclick="togglePlay('audio6', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">
-        ▶ Play Preview
-      </button>
+      <button onclick="togglePlay('audio6', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio6" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Candu%20Contoh.mp3"></audio>
     </li>
 
     <li>
-      <a href="pembayaran.html?produk=FLM HAPPY TEAM ORI" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+      <a href="pembayaran.html?produk=FLM HAPPY TEAM ORI" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM HAPPY TEAM ORI – Harga: Rp 95.000
       </a>
-      <button onclick="togglePlay('audio7', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio7', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio7" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Happy%20Team%20Contoh.mp3"></audio>
     </li>
-        <li>
-      <a href="pembayaran.html?produk=FLM Arif Sopan" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+
+    <li>
+      <a href="pembayaran.html?produk=FLM Arif Sopan" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Arif Sopan – Harga: Rp 55.000
       </a>
-      <button onclick="togglePlay('audio8', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio8', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio8" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Kane%20Contoh.mp3"></audio>
-        </li>
-                <li>
-      <a href="pembayaran.html?produk=FLM Lambada" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+    </li>
+
+    <li>
+      <a href="pembayaran.html?produk=FLM Lambada" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Lambada – Harga: Rp 100.000
       </a>
-      <button onclick="togglePlay('audio9', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio9', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio9" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Lambada.mp3"></audio>
-        </li>
-                <li>
-      <a href="pembayaran.html?produk=FLM Angga Fvnky" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+    </li>
+
+    <li>
+      <a href="pembayaran.html?produk=FLM Angga Fvnky" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Angga Fvnky – Harga: Rp 95.000
       </a>
-      <button onclick="togglePlay('audio10', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio10', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio10" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Angga%20Fvnky.mp3"></audio>
-        </li>
-                <li>
-      <a href="pembayaran.html?produk=FLM Enaff V1" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+    </li>
+
+    <li>
+      <a href="pembayaran.html?produk=FLM Enaff V1" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Enaff V1 – Harga: Rp 98.000
       </a>
-      <button onclick="togglePlay('audio11', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio11', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio11" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Enaff%20V1.mp3"></audio>
-        </li>
-                <li>
-      <a href="pembayaran.html?produk=FLM Febri Remix" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+    </li>
+
+    <li>
+      <a href="pembayaran.html?produk=FLM Febri Remix" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Febri Remix – Harga: Rp 92.000
       </a>
-      <button onclick="togglePlay('audio12', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio12', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio12" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Febri%20Remix.mp3"></audio>
-        </li>
-                <li>
-      <a href="pembayaran.html?produk=FLM Jawa Pride" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+    </li>
+
+    <li>
+      <a href="pembayaran.html?produk=FLM Jawa Pride" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Jawa Pride – Harga: Rp 90.000
       </a>
-      <button onclick="togglePlay('audio13', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio13', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio13" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride.mp3"></audio>
-        </li>
-                <li>
-      <a href="pembayaran.html?produk=FLM Jawa Pride V2" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+    </li>
+
+    <li>
+      <a href="pembayaran.html?produk=FLM Jawa Pride V2" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Jawa Pride V2 – Harga: Rp 90.000
       </a>
-      <button onclick="togglePlay('audio14', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio14', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio14" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride%20V2.mp3"></audio>
-        </li>
-                  <li>
-      <a href="pembayaran.html?produk=FLM Jawa Pride V3" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+    </li>
+
+    <li>
+      <a href="pembayaran.html?produk=FLM Jawa Pride V3" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM Jawa Pride V3 – Harga: Rp 90.000
       </a>
-      <button onclick="togglePlay('audio15', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio15', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio15" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride%20V3.mp3"></audio>
-        </li>
-                          <li>
-      <a href="pembayaran.html?produk=FLM JDM KT" class="block p-3 bg-red-800 rounded hover:bg-red-700">
+    </li>
+
+    <li>
+      <a href="pembayaran.html?produk=FLM JDM KT" class="block p-3 bg-[#106EBE] rounded hover:bg-[#0FFCBE] hover:text-black font-semibold transition">
         FLM JDM KT – Harga: Rp 110.000
       </a>
-      <button onclick="togglePlay('audio16', this)" class="mt-1 w-full p-2 bg-green-600 hover:bg-green-500 rounded">▶ Play Preview</button>
+      <button onclick="togglePlay('audio16', this)" class="mt-1 w-full p-2 bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover:text-white rounded font-semibold transition">▶ Play Preview</button>
       <audio id="audio16" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20JDM%20KT.mp3"></audio>
-        </li>
+    </li>
   </ul>
 
-  <footer class="mt-8 text-xs text-gray-400 border-t border-gray-600 pt-4 bg-black/50 p-2 rounded">
+  <footer class="mt-8 text-xs text-gray-300 border-t border-[#0FFCBE] pt-4 bg-black/50 p-2 rounded">
     © 2025 Muslih Fvnky Shop. All rights reserved.
   </footer>
 
